fix user message not showing after recieving reply

--- a/src/App.css
+++ b/src/App.css
@@ -20,13 +20,15 @@ section{
   align-items: center;
   
 }
+
 .input-area{
-  height:15%;
+  height:10%;
   width: 80%;
   background-color:rgb(5, 5, 5);
   border-radius: 10px;
   position: absolute;
-  bottom:10px;
+  bottom:70px;
+  box-shadow: 2px 10px 50px rgb(41, 41, 43);
   display: flex;
   justify-content:space-between;
   padding: 10px 20px ;
@@ -45,11 +47,19 @@ section{
   cursor: pointer;
   background-color:rgb(5, 5, 5);
 }
+.front{
+  font-weight: 900;
+  align-self: center;
+  font-size: 50px;
+  color: rgb(214, 205, 204);
+   text-shadow: 2px 2px 10px rgb(121, 121, 125);
+}
 .messages{
   width: 100%;
   height: 80%;
   padding: 10px 20px;
   display: flex;
+  justify-content: center;
   flex-direction: column;
   .message{     
     width: fit-content;    
